--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>PSD TO HTML</title>
         <!-- CSS FILES -->
     <link rel="stylesheet" href="resourses/css/style.css">
+    <link rel="stylesheet" href="vendors/css/normalize.css">
     <link rel="stylesheet" href="resourses/css/responsive.css">
         <!-- FONTS FILES -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
